objects/Item_Tracking__c/Item_Tracking__c.object-meta.xml
<CustomObject>
    <label>Item Tracking</label>
    <nameField>
        <label>Object / Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>