objects/Item_Tracking__c/fields/Client_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Approved_Date__c</fullName>
    <label>Client Approved Date</label>
    <type>Date</type>
</CustomField>