objects/Item_Tracking__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>