objects/Item_Tracking__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex Classes</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
            <value>
                <fullName>Creating domains</fullName>
            </value>
            <value>
                <fullName>Creating new buttons</fullName>
            </value>
            <value>
                <fullName>Creating new objects</fullName>
            </value>
            <value>
                <fullName>Creating Sites</fullName>
            </value>
            <value>
                <fullName>Custom report types</fullName>
            </value>
            <value>
                <fullName>Data Loader</fullName>
            </value>
            <value>
                <fullName>Duplicate rule</fullName>
            </value>
            <value>
                <fullName>Email Templates</fullName>
            </value>
            <value>
                <fullName>Fields</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Record types</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Sharing and OWD settings</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
            </value>
            <value>
                <fullName>Users and Profiles</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>VF Component</fullName>
            </value>
            <value>
                <fullName>VF Page</fullName>
            </value>
            <value>
                <fullName>WorkFlow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>