objects/Item_Tracking__c/fields/Development_Change_date__c.field-meta.xml
<CustomField>
    <fullName>Development_Change_date__c</fullName>
    <label>Development Change date</label>
    <type>Date</type>
</CustomField>