objects/Item_Tracking__c/fields/Development_Item__c.field-meta.xml
<CustomField>
    <fullName>Development_Item__c</fullName>
    <label>Development Item</label>
    <referenceTo>Development_Item__c</referenceTo>
    <relationshipLabel>Item Tracking</relationshipLabel>
    <relationshipName>Item_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>